Overlap fix

--- a/bar-update.css
+++ b/bar-update.css
@@ -86,7 +86,7 @@ text.change {
 }
 
 .change {
-  font-size:35px;
+  font-size:30px;
   font-weight:  bold;
   color:  white;
   /* background-color:blue; */
